# ha-desktop-widget

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  release.yml
scripts/: publish-release.sh
src/: actions.ts  ha.ts  icons.ts  main.ts  store.ts  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  config.rs  ha_client.rs  lib.rs  main.rs  models.rs  network.rs  secrets.rs
src/components/: card.ts  detail.ts  grid.ts  icon-picker.ts  onboarding.ts  settings.ts
